# project_aslanyan

./: Makefile  pyproject.toml
VD_games/: cli.py
VD_games/games/: __init__.py  calc.py  even.py
VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py
