[project]
name = "project_aslanyan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
project-aslanyan = { workspace = true }

[dependency-groups]
dev = [
    "project-aslanyan",
    "ruff>=0.14.4",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:run_even_game"
VD-calc = "VD_games.scripts.VD_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-progression = "VD_games.scripts.VD_progression:main"
VD-prime = "VD_games.scripts.VD_prime:main"
